--- a/unitest/html-template/index.template.html
+++ b/unitest/html-template/index.template.html
@@ -12,9 +12,9 @@
     // -->
     <head>
         <title>${title}</title>
-        <script src="pubnub.min.js"></script>
+        <script src="pubnub.js"></script>
         <script src="pubnub-crypto.min.js"></script>
-        <script src="pubnub-as2js-proxy.min.js"></script>
+        <script src="pubnub-as2js-proxy.js"></script>
         <script>PUBNUB_AS2JS_PROXY.setFlashObjectId('${application}')</script>
         <meta name="google" value="notranslate" />
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
