migrate to pubnub.min.js instead of pubnub.js in tests

--- a/unitest/html-template/index.template.html
+++ b/unitest/html-template/index.template.html
@@ -12,8 +12,7 @@
     // -->
     <head>
         <title>${title}</title>
-        <script src="pubnub.js"></script>
-        <script src="pubnub-crypto.min.js"></script>
+        <script src="pubnub.min.js"></script>
         <script src="pubnub-as2js-proxy.js"></script>
         <script>PUBNUB_AS2JS_PROXY.setFlashObjectId('${application}')</script>
         <meta name="google" value="notranslate" />
