update js files in demoApp

--- a/demoApp/html-template/index.template.html
+++ b/demoApp/html-template/index.template.html
@@ -58,7 +58,7 @@
             // JavaScript enabled so display the flashContent div in case it is not replaced with a swf object.
             swfobject.createCSS("#flashContent", "display:block;text-align:left;");
         </script>
-        <script src="pubnub.js"></script>
+        <script src="pubnub.min.js"></script>
         <script src="pubnub-crypto.min.js"></script>
         <script src="pubnub-as2js-proxy.js"></script>
         <script>PUBNUB_AS2JS_PROXY.setFlashObjectId('${application}')</script>
