fix demoAppAir html page

--- a/demoAppAir/src/demoAppAir.html
+++ b/demoAppAir/src/demoAppAir.html
@@ -1,7 +1,6 @@
 <!doctype html>
+<html lang="en">
 <head>
-    <script src="hmac-sha256.js"></script>
-    <script src="enc-base64-min.js"></script>
     <script src="pubnub.js"></script>
     <script>
         window.JSON._parse = JSON.parse;
